--- a/Index.html
+++ b/Index.html
@@ -24,10 +24,10 @@
                                 <a class="nav-link active" aria-current="page" href="Index.html">Главная</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./Каталог/Index.html">Каталог</a>
+                                <a class="nav-link" href="catalog/Index.html">Каталог</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./Контакты/Index.html">Контакты</a>
+                                <a class="nav-link" href="contacts/Index.html">Контакты</a>
                             </li>
                         </ul>
                     </div>
@@ -41,17 +41,12 @@
         </div>
         <p>LuLu - лаконичные серебряные украшения. Ручная работа. Собственное производство в России.</p>
     </section>
-
     <br>
       <br>
             <footer class="top footer">
                 Copyright &copy; 2021 LuLu
             </footer>
 
-
-
 </body>
-
 <script src="./js/script.js"></script>
-
 </html>
