--- a/catalog/Index.html
+++ b/catalog/Index.html
@@ -27,7 +27,7 @@
                                 <a class="nav-link" href="Index.html">Каталог</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="../Контакты/Index.html">Контакты</a>
+                                <a class="nav-link" href="../contacts/Index.html">Контакты</a>
                             </li>
                         </ul>
                     </div>
