--- a/contacts/Index.html
+++ b/contacts/Index.html
@@ -24,7 +24,7 @@
                                 <a class="nav-link active" aria-current="page" href="../Index.html">Главная</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="../Каталог/Index.html">Каталог</a>
+                                <a class="nav-link" href="../catalog/Index.html">Каталог</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="Index.html">Контакты</a>
