--- a/catalog/index.html
+++ b/catalog/index.html
@@ -14,20 +14,20 @@
         <header class="header">
             <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="container-fluid">
-                    <a href="Index.html"><img class="header_logo" src="../img/Logo.svg" alt="logo"></a>
+                    <a href="index.html"><img class="header_logo" src="../img/Logo.svg" alt="logo"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="../Index.html">Главная</a>
+                                <a class="nav-link active" aria-current="page" href="../index.html">Главная</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="Index.html">Каталог</a>
+                                <a class="nav-link" href="index.html">Каталог</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="../contacts/Index.html">Контакты</a>
+                                <a class="nav-link" href="../contacts/index.html">Контакты</a>
                             </li>
                         </ul>
                     </div>
