--- a/catalog/index.html
+++ b/catalog/index.html
@@ -14,7 +14,7 @@
         <header class="header">
             <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="container-fluid">
-                    <a href="index.html"><img class="header_logo" src="../img/Logo.svg" alt="logo"></a>
+                    <a href="index.html"><img class="header_logo" src="../img/logo.svg" alt="logo"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
