--- a/catalog/index.html
+++ b/catalog/index.html
@@ -8,11 +8,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="./css/style.css">
     <!--favicon-->
-    <link rel="apple-touch-icon" sizes="120x120" href="../apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../favicon-16x16.png">
-    <link rel="manifest" href="../site.webmanifest">
-    <link rel="mask-icon" href="../safari-pinned-tab.svg" color="#0e0101">
+    <link rel="apple-touch-icon" sizes="120x120" href="../img/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png">
+    <link rel="manifest" href="../img/site.webmanifest">
+    <link rel="mask-icon" href="../img/safari-pinned-tab.svg" color="#0e0101">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="theme-color" content="#ffffff">
 </head>
@@ -44,8 +44,7 @@
         </header>
     </section>
     <h2>Каталог</h2>
-    <section>
-
+    <section class="catalog_row">
        <div class="catalog_1">
            <img src="../img/11.jpg" alt="ring" width="200px">
        </div>
@@ -57,7 +56,7 @@
         </div>
     </section>
     <br>
-    <section>
+    <section  class="catalog_row">
         <div class="catalog_2">
             <img src="../img/21.jpg" alt="ring" width="200px">
         </div>
@@ -69,7 +68,7 @@
         </div>
     </section>
     <br>
-    <section>
+    <section  class="catalog_row">
         <div class="catalog_3">
             <img src="../img/31.jpg" alt="ring" width="200px">
         </div>
@@ -81,19 +80,19 @@
         </div>
     </section>
     <br>
-    <section>
+    <section  class="catalog_row">
         <div class="catalog_4">
             <img src="../img/41.jpg" alt="ring" width="200px">
         </div>
-        <div class="catalog_3">
+        <div class="catalog_4">
             <img src="../img/42.jpg" alt="ring" width="200px">
         </div >
-        <div class="catalog_3">
+        <div class="catalog_4">
             <img src="../img/43.jpeg" alt="ring" width="200px">
         </div>
     </section>
     <br>
-    <section>
+    <section  class="catalog_row">
         <div class="catalog_5">
             <img src="../img/51.jpg" alt="ring" width="200px">
         </div>
@@ -104,13 +103,10 @@
             <img src="../img/53.jpg" alt="ring" width="200px">
         </div>
     </section>
-
-            <br>
             <footer class="top footer">
                 Copyright &copy; 2021 LuLu
             </footer>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 <script src="./js/script.js"></script>
-
 </html>
