--- a/contacts/index.html
+++ b/contacts/index.html
@@ -8,19 +8,17 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="./css/style.css">
     <!--favicon-->
-    <link rel="apple-touch-icon" sizes="120x120" href="../apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../favicon-16x16.png">
-    <link rel="manifest" href="../site.webmanifest">
-    <link rel="mask-icon" href="../safari-pinned-tab.svg" color="#0e0101">
+    <link rel="apple-touch-icon" sizes="120x120" href="../img/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png">
+    <link rel="manifest" href="../img/site.webmanifest">
+    <link rel="mask-icon" href="../img/safari-pinned-tab.svg" color="#0e0101">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="theme-color" content="#ffffff">
 </head>
-
 <body>
-    <section class="top">
-        <header class="header">
-            <nav class="navbar navbar-expand-lg navbar-light">
+    <header class="header">
+        <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="container-fluid">
                     <a href="index.html"><img class="header_logo" src="../img/logo.svg" alt="logo"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,22 +39,17 @@
                     </div>
                 </div>
             </nav>
-        </header>
-    </section>
-    <section class="contacts">
+    </header>
+    <div class="contacts">
         <h2>Контакты</h2>
-        <br><br>
         <p>По вопросам о заказах и доставке</p>
         <br>
-        <p>+7 999 888 88 88
-            Время работы магазина: Ежедневно! Пн-пт 12:00-20:00 Сб-вс 11:00-19:00</p>
-    </section>
-         <br>
-            <footer class="top footer">
-                Copyright &copy; 2021 LuLu
-            </footer>
+        <p>+7 999 888 88 88  Время работы магазина: Ежедневно! Пн-пт 12:00-20:00 Сб-вс 11:00-19:00</p>
+    </div>
+        <footer class="footer">
+            Copyright &copy; 2021 LuLu
+        </footer>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-<script src="./js/script.js"></script>
-
+<!--<script src="./js/script.js"></script>-->
 </html>
