--- a/catalog/index.html
+++ b/catalog/index.html
@@ -2,6 +2,8 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
+    <!-- для разных устройств-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LuLu Shop</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;900&display=swap" rel="stylesheet">
@@ -43,71 +45,71 @@
     <h2>Каталог</h2>
     <section class="catalog_row">
         <div class="catalog">
-           <img src="../img/11.jpg" alt="earrings" width="200px" height="200px">
+           <img id="img" src="../img/11.jpg" alt="earrings" width="200px" height="200px">
            <p class="catalog_description">Earrings №1</p>
         </div>
         <div class="catalog">
-            <img src="../img/12.jpg" alt="earrings" width="200px">
+            <img id="img" src="../img/12.jpg" alt="earrings" width="200px">
             <p class="catalog_description">Earrings №2</p>
         </div>
         <div class="catalog">
-            <img src="../img/13.jpg" alt="earrings" width="200px">
+            <img id="img" src="../img/13.jpg" alt="earrings" width="200px">
             <p class="catalog_description">Earrings №3</p>
         </div>
     </section>
     <section class="catalog_row">
         <div class="catalog">
-            <img src="../img/21.jpg" alt="ring" width="200px">
+            <img id="img" src="../img/21.jpg" alt="ring" width="200px">
             <p class="catalog_description">Ring №1</p>
         </div>
         <div class="catalog">
-            <img src="../img/22.jpg" alt="ring" width="200px">
+            <img id="img" src="../img/22.jpg" alt="ring" width="200px">
             <p class="catalog_description">Ring №2</p>
         </div>
         <div class="catalog">
-            <img src="../img/23.jpg" alt="ring" width="200px">
+            <img id="img" src="../img/23.jpg" alt="ring" width="200px">
             <p class="catalog_description">Ring №3</p>
         </div>
     </section>
     <section class="catalog_row">
         <div class="catalog">
-            <img src="../img/31.jpg" alt="bracelet" width="200px">
+            <img id="img" src="../img/31.jpg" alt="bracelet" width="200px">
             <p class="catalog_description">Bracelet №1</p>
         </div>
         <div class="catalog">
-            <img src="../img/32.jpg" alt="bracelet" width="200px">
+            <img id="img" src="../img/32.jpg" alt="bracelet" width="200px">
             <p class="catalog_description">Bracelet №2</p>
         </div>
         <div class="catalog">
-            <img src="../img/33.jpg" alt="bracelet" width="200px">
+            <img id="img" src="../img/33.jpg" alt="bracelet" width="200px">
             <p class="catalog_description">Bracelet №3</p>
         </div>
     </section>
     <section class="catalog_row">
         <div class="catalog">
-            <img src="../img/41.jpg" alt="necklace" width="200px">
+            <img id="img" src="../img/41.jpg" alt="necklace" width="200px">
             <p class="catalog_description">Necklace №1</p>
         </div>
         <div class="catalog">
-            <img src="../img/42.jpg" alt="necklace" width="200px">
+            <img id="img" src="../img/42.jpg" alt="necklace" width="200px">
             <p class="catalog_description">Necklace №2</p>
         </div >
         <div class="catalog">
-            <img src="../img/43.jpeg" alt="necklace" width="200px">
+            <img id="img" src="../img/43.jpeg" alt="necklace" width="200px">
             <p class="catalog_description">Necklace №3</p>
         </div>
     </section>
     <section class="catalog_row">
         <div class="catalog">
-            <img src="../img/51.jpg" alt="pedant" width="200px">
+            <img id="img" src="../img/51.jpg" alt="pedant" width="200px">
             <p class="catalog_description">Pedant №1</p>
         </div>
         <div class="catalog">
-            <img src="../img/52.jpg" alt="pedant" width="200px">
+            <img id="img" src="../img/52.jpg" alt="pedant" width="200px">
             <p class="catalog_description">Pedant №2</p>
         </div >
         <div class="catalog">
-            <img src="../img/53.jpg" alt="pedant" width="200px">
+            <img id="img" src="../img/53.jpg" alt="pedant" width="200px">
             <p class="catalog_description">Pedant №3</p>
         </div>
     </section>
