--- a/contacts/index.html
+++ b/contacts/index.html
@@ -2,6 +2,8 @@
 <html lang="Ru">
 <head>
     <meta charset="UTF-8">
+    <!-- для разных устройств-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LuLu Shop</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;900&display=swap" rel="stylesheet">
@@ -43,8 +45,7 @@
     <div class="contacts">
         <h2>Контакты</h2>
         <p>По вопросам о заказах и доставке</p>
-        <br>
-        <p>+7 999 888 88 88  Время работы магазина: Ежедневно! Пн-пт 12:00-20:00 Сб-вс 11:00-19:00</p>
+        <p>+7 999 888 88 88  Время работы магазина: Ежедневно! <br> Пн-пт 12:00-20:00 Сб-вс 11:00-19:00</p>
     </div>
         <footer class="footer">
             Copyright &copy; 2021 LuLu
