--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
+    <!-- для разных устройств-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LuLu Shop</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;900&display=swap" rel="stylesheet">
