--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="contacts/index.html">Контакты</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="feedback/index.html">Обратная связь</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
